# Intelligent_Data_Analysis_Labs

./: README.md  lab6.ipynb  pyproject.toml
Laboratorna1/: lab1.ipynb  Лаб1_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna2/: lab2.ipynb  Лаб2_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna3/: lab3.ipynb  Лаб3_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna4/: lab4.ipynb  Лаб4_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna5/: lab5.ipynb  Лаб5_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna6/: lab6.ipynb  Лаб6_Аналіз_Даних_Ульянов_ІКМ_220г.docx
Laboratorna7/: lab6.ipynb
